--- a/FINALS/index.html
+++ b/FINALS/index.html
@@ -7,6 +7,17 @@
     <title>Tagteamsigns</title>
 </head>
 <body>
-    <div class="DASHBOARD"></div>
+    <div class="HOME">
+        <nav>
+            <img src="/FINALS/picture/tgLOGO.avif" alt="LOGO">
+            <ul>
+                <li><a href=""></a>Home</li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+                <li><a href=""></a></li>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
