--- a/FINALS/index.html
+++ b/FINALS/index.html
@@ -12,10 +12,10 @@
             <img src="/FINALS/picture/tgLOGO.avif" alt="LOGO">
             <ul>
                 <li><a href=""></a>Home</li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
-                <li><a href=""></a></li>
+                <li><a href=""></a>Services</li>
+                <li><a href=""></a>About Us</li>
+                <li><a href=""></a>Work</li>
+                <li><a href=""></a>Contact</li>
             </ul>
         </nav>
     </div>
