--- a/FINALS/index.html
+++ b/FINALS/index.html
@@ -8,21 +8,28 @@
 </head>
 <body>
     <!-- HOME -->
-    <div class="HOME">
+    <div class="HOME" id="home">
         <nav>
             <img src="/FINALS/picture/tgLOGO.avif" alt="LOGO">
             <ul>
-                <li><a href=""></a>Home</li>
-                <li><a href=""></a>Services</li>
-<<<<<<< HEAD
-                <li><a href=""></a>About us</li>
-=======
-                <li><a href=""></a>About Us</li>
->>>>>>> 151a16bf5397916162bf0497307bc015d4716a60
-                <li><a href=""></a>Work</li>
-                <li><a href=""></a>Contact</li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">About Us</a></li>
+                <li><a href="">Work</a></li>
+                <li><a href="">Contact</a></li>
             </ul>
         </nav>
+        <main>
+            <div class="hero" >
+                 <h1>
+                    <span class="sign">Signs</span> <br>
+                    Design <br>
+                    Build<br>
+                    Install<br>
+                </h1>
+            </div>
+           
+        </main>
     </div>
 </body>
 </html>
