--- a/FINALS/index.html
+++ b/FINALS/index.html
@@ -13,8 +13,8 @@
             <img src="/FINALS/picture/tgLOGO.avif" alt="LOGO">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="">Services</a></li>
                 <li><a href="">About Us</a></li>
+                <li><a href="">Services</a></li>
                 <li><a href="">Work</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
@@ -30,6 +30,36 @@
             </div>
            
         </main>
+    </div>
+    <!-- ABOUT US -->
+    <div class="ABOUT-US">
+        <div class="wwr">
+            <h1>
+                WHO <br>
+                WE <br>
+                ARE <br>
+            </h1>
+            <p>
+                We are a Full Service Sign Company with Over 20 Years in the Industry.
+                <br>
+                We specialize in Commercial Building Signs, Storefront Signs and Monument Signs!
+            </p>
+            <ul>
+                <li>Pan Channel Letters</li>
+                <li>Reversed Pan Channel Letters</li>
+                <li>LED Illumination</li>
+                <li>Monument & Pole Signs</li>
+                <li>Sign Cabinets</li>
+                <li>Sign Service and Repair</li>
+                <li>National Accounts</li>
+                <li> Permit Processing</li>
+                <li>Licensed, Bonded and Insured</li>
+            </ul>
+            <p>
+                Give us a call today for a Free Estimate!
+            </p>
+        </div>
+        
     </div>
 </body>
 </html>
