Update HTML and CSS

--- a/FINALS/index.html
+++ b/FINALS/index.html
@@ -13,7 +13,7 @@
             <img src="/FINALS/picture/tgLOGO.avif" alt="LOGO">
             <ul>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="#about">About us</a></li>
                 <li><a href="">Services</a></li>
                 <li><a href="">Work</a></li>
             </ul>
@@ -62,6 +62,22 @@
             <p class="last-p">
                 Give us a call today for a Free Estimate!
             </p>
+        </div>
+        <div class="mission">
+            <h1>
+                OUR MISSION
+            </h1>
+            <p>
+                TagTeamSigns was established in 2001 to make the process of purchasing high quality, 
+                cost effective signs available to everyone.When you work with TagTeamSigns you'll find 
+                your expectations met or exceeded. You'll find us professional and proactive in all of
+                our practices. You'll be impressed with our efficient systems, use of technology and 
+                competitive pricing.From start to finish TagTeamSigns provides complete project 
+                management, designed with each clients unique needs in mind. This has made 
+                TagTeamSigns one of the most respected sign companies in Arizona for the past
+                20 years.
+            </p>
+            
         </div>
         
     </div>  
