--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- HOME -->
     <div class="HOME" id="home">
         <nav>
-            <img src="/FINALS/picture/tgLOGO.avif" alt="LOGO">
+            <img src="./picture/tgLOGO.avif" alt="LOGO">
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About us</a></li>
@@ -163,7 +163,7 @@
             <h3>
                 We can't wait to hear from you
             </h3>
-             <img src="/FINALS/picture/tglogo2.avif" alt="LOGO">
+             <img src="./picture/tglogo2.avif" alt="LOGO">
              <a href="tagteamsigns.com">signs@tagteamsigns.com</a>
              <p>623-875-8077</p>
         </div>
@@ -192,4 +192,5 @@
             </div>
      </footer>
 </body>
+
 </html>
