--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
             <input type="text" placeholder="Subject">
             <p class="input-p">Enter Your Message *</p>
             <input type="email" placeholder="Message" class="enter-message">
-
+             <button class="submit_button">Submit</button>
         </div>
         <div class="details">
             <h3>
@@ -194,5 +194,6 @@
 </body>
 
 </html>
+
 
 
