--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
             <div class="signs" id="signs2">
                 <img src="./picture/Commercial.avif" alt="Commercial">
-                <span>Commercial Sings</span>
+                <span>Commercial Signs</span>
             </div>
             <div class="signs" id="signs3">
                 <img src="./picture/Monument.avif" alt="Monument">
@@ -194,6 +194,7 @@
 </body>
 
 </html>
+
 
 
 
